--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,1 +1,6 @@
-<p>navigation works!</p>
+<div class="dsc-navigation">
+    <img src="https://designicode.com/wp-content/uploads/2020/06/DesignandCode-White.png" alt="" height="30px">
+    <div>
+        <button class="btn-btn-primary">Usuarios</button>
+    </div>
+</div>
