Commiting changes after finishing Video #8

--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="dsc-navigation">
     <img src="https://designicode.com/wp-content/uploads/2020/06/DesignandCode-White.png" alt="" height="30px">
-    <div>
-        <button class="btn-btn-primary"  routerLink="/">Lista de Usuarios</button>
-        <button class="btn-btn-primary ml-3" routerLink="/details">Detalles de Usuario</button>
+    <div id="main-center">
+        <button class="btn btn-primary"  routerLink="/">Lista de Usuarios</button>
+        <button class="btn btn-primary" style="margin-left: 5px;" routerLink="/details">Detalles de Usuario</button>
     </div>
 </div>
