--- a/src/app/layout/navigation/navigation.component.scss
+++ b/src/app/layout/navigation/navigation.component.scss
@@ -1,8 +1,9 @@
 .dsc-navigation {
-    height: 60px;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem 1rem;
+    //margin-bottom: 1rem;
     background: rgba(0,0,0,0.8);
 }
