--- a/src/app/layout/skeleton/skeleton.component.scss
+++ b/src/app/layout/skeleton/skeleton.component.scss
@@ -1,4 +1,5 @@
 .dsc-skeleton-content {
-    min-height: calc(100vh - 100px - 60px);
+    min-height: calc(100vh - 80px - 60px);
     background: rgba(0,0,0,0.05);
+    padding-top: 1.5rem;
 }
