--- a/src/app/modules/user/user-list/user-list.component.html
+++ b/src/app/modules/user/user-list/user-list.component.html
@@ -1,1 +1,6 @@
-<h1>Lista de Usuarios</h1>
+<div class="row">
+    <div class="col-12">
+        <app-title-h1 type="secondary" text="LISTA DE USUARIOS"></app-title-h1>
+    </div>
+    <app-card-user [data]="user" *ngFor="let user of users;" class="col-12 col-md-6 col-xl-4"></app-card-user>
+</div>
