--- a/src/app/shared/components/cards/card-user/card-user.component.html
+++ b/src/app/shared/components/cards/card-user/card-user.component.html
@@ -1,4 +1,4 @@
-    <div class="dsc-card" *ngIf="data">
+    <div class="dsc-card" *ngIf="data" routerLink="/panel/user/{{data.id}}">
         <div class="dsc-card-img">
             <img src="{{data.avatar}}" alt="">
         </div>
