--- a/src/app/modules/user/user-details/user-details.component.html
+++ b/src/app/modules/user/user-details/user-details.component.html
@@ -1,1 +1,8 @@
-<h1>Detalles de Usuario</h1>
+<h2>
+    Este es el Usuario con ID: {{ id }}
+</h2>
+<div class="row">
+    <div class="col-12">
+        <h1>Detalles de {{ currentUser.name}}</h1>
+    </div>
+</div>
