error en las tarjetas de intereses

--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -2,5 +2,6 @@
     <img src="https://designicode.com/wp-content/uploads/2020/06/DesignandCode-White.png" alt="" height="30px">
     <div id="main-center">
         <button class="btn btn-primary"  routerLink="/panel/user">Lista de Usuarios</button>
+        <button class="btn btn-primary"  routerLink="/panel/interest">Lista de Inteses</button>
     </div>
 </div>
