--- a/src/app/modules/user/user-details/user-details.component.html
+++ b/src/app/modules/user/user-details/user-details.component.html
@@ -1,8 +1,17 @@
-<h2>
-    Este es el Usuario con ID: {{ id }}
-</h2>
-<div class="row">
+
+<div class="container">
     <div class="col-12">
-        <h1>Detalles de {{ currentUser.name}}</h1>
+        <h2 class="text-success my-5">
+            Este es el Usuario con ID: {{ id }}
+        </h2>
+    </div>
+    <div class="col-12 col-md-6 col-xl-3" style="text-align: center;">
+        <img class="dsc-user-img" src="{{currentUser.avatar}}">
+    </div>
+    <div class="col-12 col-md-6 col-xl-9">
+        <h2>Detalles de {{ currentUser.name}}</h2>
+        <h2>Edad: {{ currentUser.age }}</h2>
+        <h3>Puesto: {{ currentUser.work }}</h3>
+        <p>{{ currentUser.description }}</p>
     </div>
 </div>
