para trabajo en la universidad

--- a/src/app/shared/components/cards/card-interest/card-interest.component.html
+++ b/src/app/shared/components/cards/card-interest/card-interest.component.html
@@ -1,4 +1,4 @@
-<div class="dsc-card" *ngIf="dataInterest" routerLink="/panel/user/{{dataInterest.id}}">
+<div class="dsc-card" *ngIf="dataInterest" routerLink="/panel/interest/{{dataInterest.id}}">
     <div class="dsc-card-img">
         <img src="{{dataInterest.avatar}}" alt="">
     </div>
