to work at home

--- a/src/app/modules/interest/interest-list/interest-list.component.html
+++ b/src/app/modules/interest/interest-list/interest-list.component.html
@@ -2,5 +2,5 @@
     <div class="col-12">
         <app-title-h1 type="secondary" text="LISTA DE INTERESES"></app-title-h1>
     </div>
-    <app-card-interest [dataInterest]="interest" *ngFor="let interes of interest;" class="col-12 col-md-6 col-xl-3"></app-card-interest>
+    <app-card-interest [dataInterest]="interes" *ngFor="let interes of interest;" class="col-lg-3 col-md-4 col-sm-6 col-xs-12"></app-card-interest>
 </div>
