--- a/src/app/shared/components/cards/card-interest/card-interest.component.html
+++ b/src/app/shared/components/cards/card-interest/card-interest.component.html
@@ -1,10 +1,12 @@
 <div class="dsc-card" *ngIf="dataInterest" routerLink="/panel/interest/{{dataInterest.id}}">
     <div class="dsc-card-img">
-        <img src="{{dataInterest.avatar}}" alt="">
+        <img src="{{dataInterest.avatar}}" alt="{{dataInterest.avatar}}">
     </div>
     <div class="dsc-card-info">
-        <h2>{{dataInterest.title}}</h2>
-        <p>{{dataInterest.description}}</p>
+        <div class="title-interest">
+            {{dataInterest.title}}
+        </div>
+        <p class="description-interest">{{dataInterest.description}}</p>
         <p>{{dataInterest.link}}</p>
         <!--<p *ngIf="data.work">{{data.work}}</p>-->
     </div>
