--- a/src/app/shared/components/cards/card-interest/card-interest.component.scss
+++ b/src/app/shared/components/cards/card-interest/card-interest.component.scss
@@ -1,35 +1,54 @@
 .dsc-card{
-    height: 180px;
-    max-width: 450px;
+    background-color: white;
+    text-align: center;
+    height: 500px;
+    max-height: 500px;
+    min-width: 250px;
+    max-width: 300px;
+    font-size: 16pt !important;
     border: 1px solid rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
     padding: 0.5rem;
-    display: flex;
-    align-items: center;
-    border-left: 4px solid rgb(35, 94, 211);
     transition: 0.7s all ease-out;
-    margin: 1rem auto;
-    :hover{
+    align-items: center;
+    /*:hover{
         transform: scale(1.05);
         cursor: pointer;
-    }
+    }*/
+}
+
+.title-interest{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #339052;
+    text-align: center !important;
+}
+
+.description-interest{
+    font-size: 8pt !important;
+    color: #807f7f;
+    text-align: left;
 }
 
 .dsc-card-img {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    //margin-left: 90px;
     width: 100px;
     height: 100px;
-    padding: 0.5rem;
+    //padding: 0.5rem;
+    display: flex;
+    text-align: center;
     img{
         width: 100%;
         height: 100%;
         border-radius: 100%;
-        box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
+        box-shadow: 0px 0px 6px 1px #339052;
     }
 }
 
 .dsc-card-info{
-    border-left: 1px solid rgba(0, 0, 0, 0.25);
+    //border-left: 1px solid rgba(0, 0, 0, 0.25);
     padding: 0.5rem;
     p {
         opacity: 0.5;
