to word at the University

--- a/src/app/modules/user/user-details/user-details.component.html
+++ b/src/app/modules/user/user-details/user-details.component.html
@@ -1,11 +1,11 @@
 
 <div class="container">
-    <div class="col-12">
+    <div class="col-12 col-md-3 col-xl-3">
         <h2 class="text-success my-5">
             Este es el Usuario con ID: {{ id }}
         </h2>
     </div>
-    <div class="col-12 col-md-6 col-xl-3" style="text-align: center;">
+    <div class="col-12 col-md-3 col-xl-3">
         <img class="dsc-user-img" src="{{currentUser.avatar}}">
     </div>
     <div class="col-12 col-md-6 col-xl-9">
