--- a/src/app/shared/components/cards/card-interest/card-interest.component.html
+++ b/src/app/shared/components/cards/card-interest/card-interest.component.html
@@ -6,8 +6,7 @@
         <div class="title-interest">
             {{dataInterest.title}}
         </div>
-        <p class="description-interest">{{dataInterest.description}}</p>
-        <p>{{dataInterest.link}}</p>
+        <a href={{dataInterest.link}}><p class="description-interest">{{dataInterest.description}}</p></a>
         <!--<p *ngIf="data.work">{{data.work}}</p>-->
     </div>
 </div>
