--- a/src/app/shared/components/cards/card-interest/card-interest.component.scss
+++ b/src/app/shared/components/cards/card-interest/card-interest.component.scss
@@ -1,33 +1,43 @@
 .dsc-card{
     background-color: white;
-    text-align: center;
+    text-align: center !important;
     height: 500px;
     max-height: 500px;
     min-width: 250px;
-    max-width: 300px;
-    font-size: 16pt !important;
+    max-width: 250px;
     border: 1px solid rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
-    padding: 0.5rem;
+    padding: 2rem;
     transition: 0.7s all ease-out;
-    align-items: center;
+    align-items: center !important;
     /*:hover{
         transform: scale(1.05);
         cursor: pointer;
     }*/
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 .title-interest{
+    font-size: 16pt !important;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #339052;
     text-align: center !important;
+    padding: 0%;
 }
 
 .description-interest{
     font-size: 8pt !important;
     color: #807f7f;
     text-align: left;
+    margin-top: 20px;
+    text-decoration: none;
 }
 
 .dsc-card-img {
